allow running existing tests (they're more samples useful for debugging harness)
svn path=/branches/mvn/; revision=546