@@ -192,4 +192,142 @@
             <version>0.4</version>
         </dependency>
     </dependencies>
+    
+    <profiles>
+        <profile>
+            <id>jaxws-ri</id>
+            <activation>
+                <property>
+                    <!-- points to local jaxws-ri dist dir -->
+                    <name>jaxws-image</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-clean-plugin</artifactId>
+                        <version>2.5</version>
+                        <executions>
+                            <execution>
+                                <id>default-clean</id>
+                                <goals>
+                                    <goal>clean</goal>
+                                </goals>
+                                <configuration>
+                                    <filesets>
+                                        <fileset>
+                                            <directory>${project.build.directory}</directory>
+                                        </fileset>
+                                        <fileset>
+                                            <directory>src/test/testcases</directory>
+                                            <includes>
+                                                <include>**/work/**</include>
+                                            </includes>
+                                            <followSymlinks>false</followSymlinks>
+                                        </fileset>
+                                    </filesets>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.5.1</version>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>target/endorsed</outputDirectory>
+                                    <silent>false</silent>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>javax.xml.bind</groupId>
+                                            <artifactId>jaxb-api</artifactId>
+                                            <version>2.2.7</version>
+                                            <type>jar</type>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>javax.xml.soap</groupId>
+                                            <artifactId>saaj-api</artifactId>
+                                            <version>1.3.4</version>
+                                            <type>jar</type>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>javax.xml.ws</groupId>
+                                            <artifactId>jaxws-api</artifactId>
+                                            <version>2.2.8</version>
+                                            <type>jar</type>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>copy-transport</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>target/transport</outputDirectory>
+                                    <silent>false</silent>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>com.sun.xml.ws</groupId>
+                                            <artifactId>jaxws-local-transport</artifactId>
+                                            <version>2.2.8-SNAPSHOT</version>
+                                            <type>jar</type>
+                                        </artifactItem>
+                                    </artifactItems>
+                                    <stripVersion>true</stripVersion>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <id>run-tests</id>
+                                <configuration>
+                                    <target>
+                                        <delete dir="target/surefire-reports" />
+
+                                        <java classname="com.sun.xml.ws.test.Main" fork="true" classpathref="maven.test.classpath">
+                                            <jvmarg line="-Djava.endorsed.dirs=target/endorsed"/>
+                                            <arg value="-cp:jaxws-image" />
+                                            <arg path="${jaxws-image}" />
+
+                                            <arg value="-report" />
+                                            <arg path="target/surefire-reports" />
+                                            
+                                            <arg value="-transport" />
+                                            <arg path="target/transport/jaxws-local-transport.jar" />
+                                            
+                                            <!-- test data -->
+                                            <arg value="-r" />
+                                            <arg path="src/test/testcases/jaxws" />
+
+                                            <arg line="${test.options}"/>
+                                        </java>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>    
 </project>
